--- a/apps/monitoring/base/grafana/grafana-dashboard-rolling-demo.yaml
+++ b/apps/monitoring/base/grafana/grafana-dashboard-rolling-demo.yaml
@@ -2,6 +2,7 @@ apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDashboard
 metadata:
   name: rolling-demo-health
+  namespace: model-monitoring
   annotations:
     argocd.argoproj.io/sync-wave: "2"
 spec:
