--- a/apps/monitoring/base/grafana/grafana-datasource.yaml
+++ b/apps/monitoring/base/grafana/grafana-datasource.yaml
@@ -2,6 +2,7 @@ apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDatasource
 metadata:
   name: prometheus
+  namespace: model-monitoring
   annotations:
     argocd.argoproj.io/sync-wave: "1"
 spec:
@@ -33,6 +34,7 @@ apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDatasource
 metadata:
   name: prometheus-user-workload
+  namespace: model-monitoring
 spec:
   instanceSelector:
     matchLabels:
