--- a/apps/monitoring/base/grafana/grafana-prometheus-sa.yaml
+++ b/apps/monitoring/base/grafana/grafana-prometheus-sa.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: grafana-prometheus-sa
+  namespace: model-monitoring
   annotations:
     argocd.argoproj.io/sync-wave: "0"
 ---
@@ -9,6 +10,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: grafana-prometheus-sa-token
+  namespace: model-monitoring
   annotations:
     kubernetes.io/service-account.name: grafana-prometheus-sa
     argocd.argoproj.io/sync-wave: "0"
