--- a/apps/monitoring/base/grafana/grafana.yaml
+++ b/apps/monitoring/base/grafana/grafana.yaml
@@ -2,6 +2,7 @@ apiVersion: grafana.integreatly.org/v1beta1
 kind: Grafana
 metadata:
   name: grafana
+  namespace: model-monitoring
   labels:
     dashboards: "grafana"
   annotations:
