Move rules to respective namespaces

--- a/apps/monitoring/base/rhoai-models-registry/prometheus-rules.yaml
+++ b/apps/monitoring/base/rhoai-models-registry/prometheus-rules.yaml
@@ -2,7 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
   name: rhoai-models-registry-rules
-  namespace: model-monitoring
+  namespace: vllm
 spec:
   groups:
     - name: rhoai-models-registry.health
