--- a/apps/monitoring/base/rolling-demo/kustomization.yaml
+++ b/apps/monitoring/base/rolling-demo/kustomization.yaml
@@ -2,3 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - rolling-demo-servicemonitor.yaml
+  - rolling-demo-prometheus-rules.yaml
