--- a/apps/monitoring/base/rolling-demo/kustomization.yaml
+++ b/apps/monitoring/base/rolling-demo/kustomization.yaml
@@ -3,3 +3,4 @@ kind: Kustomization
 resources:
   - rolling-demo-servicemonitor.yaml
   - rolling-demo-prometheus-rules.yaml
+  - alertmanager-config.yaml
