--- a/apps/monitoring/base/grafana/grafana-rbac.yaml
+++ b/apps/monitoring/base/grafana/grafana-rbac.yaml
@@ -21,6 +21,7 @@ rules:
   - apiGroups:
       - monitoring.coreos.com
     resources:
+      - alertmanagerconfigs
       - prometheusrules
       - servicemonitors
       - podmonitors
