--- a/apps/monitoring/base/rhoai-models-registry/alertmanager-config.yaml
+++ b/apps/monitoring/base/rhoai-models-registry/alertmanager-config.yaml
@@ -15,33 +15,6 @@ spec:
     repeatInterval: 4h
   receivers:
     - name: slack-receiver
-      slackConfigs:
-        - apiURL:
-            name: webhook-secret
-            key: webhook-url
+      webhookConfigs:
+        - url: http://slack-webhook-proxy.model-monitoring.svc.cluster.local:8080/webhook
           sendResolved: true
-          httpConfig:
-            followRedirects: true
-          title: '{{ if eq .Status "firing" }}[FIRING]{{ else }}[RESOLVED]{{ end }} {{ .CommonLabels.alertname }}'
-          text: >-
-            {{ range .Alerts }}
-
-            {{ if eq $.Status "firing" }}🔴 *[FIRING] {{ .Labels.alertname }}*{{ else }}✅ *[RESOLVED] {{ .Labels.alertname }}*{{ end }}
-
-            ━━━━━━━━━━━━━━━━━━━━━━━
-
-            *Severity:*  {{ if eq .Labels.severity "critical" }}🔥 critical{{ else }}⚠️ warning{{ end }}
-
-            *Namespace:*  `{{ .Labels.namespace }}`
-
-            {{ if .Labels.pod }}*Pod:*  `{{ .Labels.pod }}`{{ end }}
-
-            *Summary*
-
-            {{ .Annotations.summary }}
-
-            *Description*
-
-            {{ .Annotations.description }}
-
-            {{ end }}
