--- a/apps/monitoring/base/grafana/grafana.yaml
+++ b/apps/monitoring/base/grafana/grafana.yaml
@@ -11,28 +11,6 @@ spec:
   config:
     log:
       mode: console
-    auth:
-      disable_login_form: "false"
-      disable_signout_menu: "false"
-    auth.anonymous:
-      enabled: "false"
-    auth.generic_oauth:
-      enabled: "true"
-      name: Keycloak
-      allow_sign_up: "false"
-      auto_login: "true"
-      scopes: openid email profile offline_access
-      email_attribute_path: email
-      login_attribute_path: username
-      name_attribute_path: full_name
-      skip_org_role_sync: "true"
-      use_refresh_token: "true"
-    users:
-      auto_assign_org: "true"
-      auto_assign_org_role: Viewer
-      viewers_can_edit: "false"
-    rbac:
-      permission_cache: "true"
   deployment:
     spec:
       template:
@@ -40,31 +18,16 @@ spec:
           containers:
             - name: grafana
               env:
-                - name: GF_AUTH_GENERIC_OAUTH_CLIENT_ID
+                - name: GF_SECURITY_ADMIN_USER
                   valueFrom:
                     secretKeyRef:
-                      name: keycloak-secrets
-                      key: client_id
-                - name: GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET
+                      name: grafana-admin
+                      key: username
+                - name: GF_SECURITY_ADMIN_PASSWORD
                   valueFrom:
                     secretKeyRef:
-                      name: keycloak-secrets
-                      key: client_secret
-                - name: GF_AUTH_GENERIC_OAUTH_AUTH_URL
-                  valueFrom:
-                    secretKeyRef:
-                      name: keycloak-secrets
-                      key: auth_url
-                - name: GF_AUTH_GENERIC_OAUTH_TOKEN_URL
-                  valueFrom:
-                    secretKeyRef:
-                      name: keycloak-secrets
-                      key: token_url
-                - name: GF_AUTH_GENERIC_OAUTH_API_URL
-                  valueFrom:
-                    secretKeyRef:
-                      name: keycloak-secrets
-                      key: api_url
+                      name: grafana-admin
+                      key: password
               resources:
                 requests:
                   cpu: 100m
