--- a/apps/monitoring/base/ai-providers/ai-providers-service.yaml
+++ b/apps/monitoring/base/ai-providers/ai-providers-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: robotheus
-  namespace: model-monitoring
+  namespace: devcluster-monitoring
   labels:
     app: robotheus
 spec:
