--- a/apps/monitoring/base/ai-providers/ai-providers-servicemonitor.yaml
+++ b/apps/monitoring/base/ai-providers/ai-providers-servicemonitor.yaml
@@ -2,7 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: robotheus
-  namespace: model-monitoring
+  namespace: devcluster-monitoring
   labels:
     app: robotheus
 spec:
