--- a/apps/monitoring/base/ai-providers/kustomization.yaml
+++ b/apps/monitoring/base/ai-providers/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: model-monitoring
+namespace: devcluster-monitoring
 resources:
   - ai-providers-deployment.yaml
   - ai-providers-service.yaml
