--- a/apps/monitoring/base/grafana/grafana-dashboard-rhoai-models-registry.yaml
+++ b/apps/monitoring/base/grafana/grafana-dashboard-rhoai-models-registry.yaml
@@ -2,7 +2,7 @@ apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDashboard
 metadata:
   name: rhoai-models-registry
-  namespace: model-monitoring
+  namespace: devcluster-monitoring
   annotations:
     argocd.argoproj.io/sync-wave: "2"
 spec:
