--- a/apps/monitoring/base/grafana/grafana-folder.yaml
+++ b/apps/monitoring/base/grafana/grafana-folder.yaml
@@ -2,7 +2,7 @@ apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaFolder
 metadata:
   name: gitops
-  namespace: model-monitoring
+  namespace: devcluster-monitoring
   annotations:
     argocd.argoproj.io/sync-wave: "1"
 spec:
