--- a/apps/monitoring/base/grafana/grafana-prometheus-sa.yaml
+++ b/apps/monitoring/base/grafana/grafana-prometheus-sa.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: grafana-prometheus-sa
-  namespace: model-monitoring
+  namespace: devcluster-monitoring
   annotations:
     argocd.argoproj.io/sync-wave: "0"
 ---
@@ -10,7 +10,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: grafana-prometheus-sa-token
-  namespace: model-monitoring
+  namespace: devcluster-monitoring
   annotations:
     kubernetes.io/service-account.name: grafana-prometheus-sa
     argocd.argoproj.io/sync-wave: "0"
@@ -29,4 +29,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: grafana-prometheus-sa
-    namespace: model-monitoring
+    namespace: devcluster-monitoring
