--- a/apps/monitoring/base/namespace.yaml
+++ b/apps/monitoring/base/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: model-monitoring
+  name: devcluster-monitoring
   labels:
     argocd.argoproj.io/managed-by: openshift-gitops
