--- a/apps/monitoring/base/rhoai-models-registry/podmonitor-kserve-predictors.yaml
+++ b/apps/monitoring/base/rhoai-models-registry/podmonitor-kserve-predictors.yaml
@@ -2,7 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
   name: kserve-vllm-predictors
-  namespace: model-monitoring
+  namespace: devcluster-monitoring
   labels:
     app: kserve-vllm-predictors
 spec:
