--- a/argocd/apps/devcluster-monitoring.yaml
+++ b/argocd/apps/devcluster-monitoring.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: model-monitoring
+  name: devcluster-monitoring
   namespace: openshift-gitops
 spec:
   project: default
@@ -11,7 +11,7 @@ spec:
     path: apps/monitoring/overlays/dev
   destination:
     server: https://kubernetes.default.svc
-    namespace: model-monitoring
+    namespace: devcluster-monitoring
   syncPolicy:
     automated:
       prune: true
