--- a/apps/monitoring/base/grafana/grafana.yaml
+++ b/apps/monitoring/base/grafana/grafana.yaml
@@ -11,6 +11,19 @@ spec:
   config:
     log:
       mode: console
+    auth:
+      disable_login_form: "false"
+    auth.generic_oauth:
+      enabled: "true"
+      name: Keycloak
+      allow_sign_up: "false"
+      auto_login: "false"
+      scopes: openid email profile offline_access roles
+      email_attribute_path: email
+      login_attribute_path: username
+      name_attribute_path: full_name
+      skip_org_role_sync: "true"
+      use_refresh_token: "true"
   deployment:
     spec:
       template:
@@ -28,6 +41,31 @@ spec:
                     secretKeyRef:
                       name: grafana-admin
                       key: password
+                - name: GF_AUTH_GENERIC_OAUTH_CLIENT_ID
+                  valueFrom:
+                    secretKeyRef:
+                      name: keycloak-secrets
+                      key: client_id
+                - name: GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET
+                  valueFrom:
+                    secretKeyRef:
+                      name: keycloak-secrets
+                      key: client_secret
+                - name: GF_AUTH_GENERIC_OAUTH_AUTH_URL
+                  valueFrom:
+                    secretKeyRef:
+                      name: keycloak-secrets
+                      key: auth_url
+                - name: GF_AUTH_GENERIC_OAUTH_TOKEN_URL
+                  valueFrom:
+                    secretKeyRef:
+                      name: keycloak-secrets
+                      key: token_url
+                - name: GF_AUTH_GENERIC_OAUTH_API_URL
+                  valueFrom:
+                    secretKeyRef:
+                      name: keycloak-secrets
+                      key: api_url
               resources:
                 requests:
                   cpu: 100m
