Add custom prometheus datasource in wave 1

--- a/apps/monitoring/base/grafana/grafana-datasource.yaml
+++ b/apps/monitoring/base/grafana/grafana-datasource.yaml
@@ -35,6 +35,8 @@ kind: GrafanaDatasource
 metadata:
   name: prometheus-user-workload
   namespace: devcluster-monitoring
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   instanceSelector:
     matchLabels:
