--- a/apps/monitoring/base/grafana/grafana.yaml
+++ b/apps/monitoring/base/grafana/grafana.yaml
@@ -14,7 +14,7 @@ spec:
     server:
       root_url: "%(GF_SERVER_ROOT_URL)s"
     auth:
-      disable_login_form: "false"
+      disable_login_form: "true"
     auth.generic_oauth:
       enabled: "true"
       name: RedHat SSO
