--- a/apps/monitoring/base/grafana/grafana.yaml
+++ b/apps/monitoring/base/grafana/grafana.yaml
@@ -13,7 +13,7 @@ spec:
       mode: console
     server:
       root_url: "%(GF_SERVER_ROOT_URL)s"
-    auth:
+    auth.basic:
       disable_login_form: "true"
     auth.generic_oauth:
       enabled: "true"
