--- a/apps/monitoring/base/grafana/grafana.yaml
+++ b/apps/monitoring/base/grafana/grafana.yaml
@@ -32,8 +32,15 @@ spec:
     spec:
       template:
         spec:
+          volumes:
+            - name: grafana-data
+              persistentVolumeClaim:
+                claimName: grafana-data
           containers:
             - name: grafana
+              volumeMounts:
+                - name: grafana-data
+                  mountPath: /var/lib/grafana
               env:
                 - name: GF_SECURITY_ADMIN_USER
                   valueFrom:
