--- a/apps/monitoring/base/grafana/grafana-dashboard-ai-providers.yaml
+++ b/apps/monitoring/base/grafana/grafana-dashboard-ai-providers.yaml
@@ -3,8 +3,9 @@ kind: GrafanaDashboard
 metadata:
   name: ai-providers
   annotations:
-    argocd.argoproj.io/sync-wave: "2"
+    argocd.argoproj.io/sync-wave: "3"
 spec:
+  resyncPeriod: 5m
   instanceSelector:
     matchLabels:
       dashboards: "grafana"
