Add debug level for robotheus

--- a/apps/monitoring/base/ai-providers/ai-providers-deployment.yaml
+++ b/apps/monitoring/base/ai-providers/ai-providers-deployment.yaml
@@ -18,6 +18,8 @@ spec:
       containers:
         - name: exporter
           image: ghcr.io/thepetk/robotheus:v0.1.7
+          args:
+            - --log.level=debug
           ports:
             - name: metrics
               containerPort: 9185
